--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 📥 Fazer checkout do código
+    - name: Fazer checkout do código
       uses: actions/checkout@v3
 
     - name: 🧰 Instalar dependências do sistema
