--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,16 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
-    # 1️⃣ Pega o código do repo
+    # 1️ Pega o código do repo
     - uses: actions/checkout@v4
 
-    # 2️⃣ Configura Python
+    # 2️ Configura Python
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
 
-    # 3️⃣ Instala dependências do sistema
+    # 3️ Instala dependências do sistema
     - name: Install system dependencies
       run: |
         sudo apt update
@@ -32,7 +32,7 @@ jobs:
           libltdl-dev ccache
         sudo ln -s /lib/x86_64-linux-gnu/libtinfo.so.6 /lib/x86_64-linux-gnu/libtinfo.so.5 || true
 
-    # 4️⃣ Cache do Buildozer para acelerar builds
+    # 4️ Cache do Buildozer para acelerar builds
     - name: Cache Buildozer
       uses: actions/cache@v3
       with:
@@ -43,7 +43,7 @@ jobs:
         restore-keys: |
           buildozer-
 
-    # 5️⃣ Cria venv e instala Buildozer + Cython
+    # 5️ Cria venv e instala Buildozer + Cython
     - name: Setup Buildozer
       run: |
         python3 -m venv venv
@@ -51,19 +51,19 @@ jobs:
         pip install --upgrade pip wheel setuptools
         pip install buildozer==1.5.0 cython==0.29.36
 
-    # 6️⃣ Cria imagens placeholder se não existirem
+    # 6️ Cria imagens placeholder se não existirem
     - name: Create placeholder images
       run: |
         if [ ! -f Icon.png ]; then
           echo "Creating Icon.png placeholder..."
-          convert -size 512x512 xc:blue -gravity center -pointsize 72 -fill white -annotate +0+0 "A" Icon.png || true
+          convert -size 512x512 xc:blue -gravity center -pointsize 72 -fill white -annotate +0+0 "A" Icon.png || echo "ImageMagick not available, skipping icon"
         fi
         if [ ! -f Splash.png ]; then
           echo "Creating Splash.png placeholder..."
-          convert -size 720x1280 xc:blue -gravity center -pointsize 120 -fill white -annotate +0+0 "Antenas" Splash.png || true
+          convert -size 720x1280 xc:blue -gravity center -pointsize 120 -fill white -annotate +0+0 "Antenas" Splash.png || echo "ImageMagick not available, skipping splash"
         fi
 
-    # 7️⃣ Build APK com log detalhado
+    # 7️ Build APK com log detalhado
     - name: Build APK
       run: |
         source venv/bin/activate
@@ -71,7 +71,7 @@ jobs:
         yes | buildozer android debug 2>&1 | tee build.log
       continue-on-error: false
       
-    # 8️⃣ Upload do log completo em caso de erro
+    # 8️ Upload do log completo em caso de erro
     - name: Upload build log
       if: always()
       uses: actions/upload-artifact@v4
@@ -79,7 +79,7 @@ jobs:
         name: build-log
         path: build.log
         
-    # 9️⃣ Upload do APK gerado
+    # 9️ Upload do APK gerado
     - name: Upload APK
       if: success()
       uses: actions/upload-artifact@v4
@@ -87,3 +87,9 @@ jobs:
         name: app-debug-apk
         path: bin/*.apk
         if-no-files-found: error
+```
+
+---
+
+##  **ONDE COLOCAR CADA ARQUIVO:**
+
