--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    # Usando 'ubuntu-latest' para garantir a versão mais estável do runner
+    runs-on: ubuntu-latest
 
     steps:
     # 1️ Pega o código do repo
@@ -20,7 +21,7 @@ jobs:
       with:
         python-version: '3.10'
 
-    # 3️ Instala dependências do sistema
+    # 3️ Instala dependências do sistema (incluindo ImageMagick para placeholders)
     - name: Install system dependencies
       run: |
         sudo apt update
@@ -29,7 +30,7 @@ jobs:
           zlib1g-dev libncurses5-dev libncurses6 libstdc++6 \
           libffi-dev libssl-dev libtinfo6 \
           autoconf automake libtool pkg-config m4 build-essential \
-          libltdl-dev ccache
+          libltdl-dev ccache imagemagick
         sudo ln -s /lib/x86_64-linux-gnu/libtinfo.so.6 /lib/x86_64-linux-gnu/libtinfo.so.5 || true
 
     # 4️ Cache do Buildozer para acelerar builds
@@ -54,24 +55,31 @@ jobs:
     # 6️ Cria imagens placeholder se não existirem
     - name: Create placeholder images
       run: |
+        # Usando 'convert' agora que ImageMagick está instalado
         if [ ! -f Icon.png ]; then
           echo "Creating Icon.png placeholder..."
-          convert -size 512x512 xc:blue -gravity center -pointsize 72 -fill white -annotate +0+0 "A" Icon.png || echo "ImageMagick not available, skipping icon"
+          convert -size 512x512 xc:blue -gravity center -pointsize 72 -fill white -annotate +0+0 "A" Icon.png
         fi
         if [ ! -f Splash.png ]; then
           echo "Creating Splash.png placeholder..."
-          convert -size 720x1280 xc:blue -gravity center -pointsize 120 -fill white -annotate +0+0 "Antenas" Splash.png || echo "ImageMagick not available, skipping splash"
+          convert -size 720x1280 xc:blue -gravity center -pointsize 120 -fill white -annotate +0+0 "Antenas" Splash.png
         fi
 
-    # 7️ Build APK com log detalhado
+    # 7️ Limpa execuções antigas para liberar espaço (O passo crucial para NumPy/Matplotlib) 🧹
+    - name: Clean previous builds to free up space
+      run: |
+        source venv/bin/activate
+        # Remove todos os caches e downloads antigos do buildozer
+        buildozer clean
+
+    # 8️ Build APK com log detalhado
     - name: Build APK
       run: |
         source venv/bin/activate
         # Aceita licenças do Android SDK automaticamente
         yes | buildozer android debug 2>&1 | tee build.log
-      continue-on-error: false
       
-    # 8️ Upload do log completo em caso de erro
+    # 9️ Upload do log completo em caso de erro
     - name: Upload build log
       if: always()
       uses: actions/upload-artifact@v4
@@ -79,7 +87,7 @@ jobs:
         name: build-log
         path: build.log
         
-    # 9️ Upload do APK gerado
+    # 🔟 Upload do APK gerado
     - name: Upload APK
       if: success()
       uses: actions/upload-artifact@v4
@@ -87,6 +95,3 @@ jobs:
         name: app-debug-apk
         path: bin/*.apk
         if-no-files-found: error
-
-
----
