--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,20 +8,19 @@ on:
 
 jobs:
   build:
-    # Usando 'ubuntu-latest' para garantir a versão mais estável do runner
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
-    # 1️ Pega o código do repo
+    # 1️⃣ Pega o código do repo
     - uses: actions/checkout@v4
 
-    # 2️ Configura Python
+    # 2️⃣ Configura Python
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
 
-    # 3️ Instala dependências do sistema (incluindo ImageMagick para placeholders)
+    # 3️⃣ Instala dependências do sistema
     - name: Install system dependencies
       run: |
         sudo apt update
@@ -30,10 +29,10 @@ jobs:
           zlib1g-dev libncurses5-dev libncurses6 libstdc++6 \
           libffi-dev libssl-dev libtinfo6 \
           autoconf automake libtool pkg-config m4 build-essential \
-          libltdl-dev ccache imagemagick
+          libltdl-dev ccache
         sudo ln -s /lib/x86_64-linux-gnu/libtinfo.so.6 /lib/x86_64-linux-gnu/libtinfo.so.5 || true
 
-    # 4️ Cache do Buildozer para acelerar builds
+    # 4️⃣ Cache do Buildozer para acelerar builds
     - name: Cache Buildozer
       uses: actions/cache@v3
       with:
@@ -44,7 +43,7 @@ jobs:
         restore-keys: |
           buildozer-
 
-    # 5️ Cria venv e instala Buildozer + Cython
+    # 5️⃣ Cria venv e instala Buildozer + Cython
     - name: Setup Buildozer
       run: |
         python3 -m venv venv
@@ -52,34 +51,27 @@ jobs:
         pip install --upgrade pip wheel setuptools
         pip install buildozer==1.5.0 cython==0.29.36
 
-    # 6️ Cria imagens placeholder se não existirem
+    # 6️⃣ Cria imagens placeholder se não existirem
     - name: Create placeholder images
       run: |
-        # Usando 'convert' agora que ImageMagick está instalado
         if [ ! -f Icon.png ]; then
           echo "Creating Icon.png placeholder..."
-          convert -size 512x512 xc:blue -gravity center -pointsize 72 -fill white -annotate +0+0 "A" Icon.png
+          convert -size 512x512 xc:blue -gravity center -pointsize 72 -fill white -annotate +0+0 "A" Icon.png || true
         fi
         if [ ! -f Splash.png ]; then
           echo "Creating Splash.png placeholder..."
-          convert -size 720x1280 xc:blue -gravity center -pointsize 120 -fill white -annotate +0+0 "Antenas" Splash.png
+          convert -size 720x1280 xc:blue -gravity center -pointsize 120 -fill white -annotate +0+0 "Antenas" Splash.png || true
         fi
 
-    # 7️ Limpa execuções antigas para liberar espaço (O passo crucial para NumPy/Matplotlib) 🧹
-    - name: Clean previous builds to free up space
-      run: |
-        source venv/bin/activate
-        # CORREÇÃO: Deve ser 'buildozer android clean'
-        buildozer android clean
-
-    # 8️ Build APK com log detalhado
+    # 7️⃣ Build APK com log detalhado
     - name: Build APK
       run: |
         source venv/bin/activate
         # Aceita licenças do Android SDK automaticamente
         yes | buildozer android debug 2>&1 | tee build.log
+      continue-on-error: false
       
-    # 9️ Upload do log completo em caso de erro
+    # 8️⃣ Upload do log completo em caso de erro
     - name: Upload build log
       if: always()
       uses: actions/upload-artifact@v4
@@ -87,7 +79,7 @@ jobs:
         name: build-log
         path: build.log
         
-    # 🔟 Upload do APK gerado
+    # 9️⃣ Upload do APK gerado
     - name: Upload APK
       if: success()
       uses: actions/upload-artifact@v4
